--- a/web/index.html
+++ b/web/index.html
@@ -9,9 +9,14 @@
 
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+  <link rel="stylesheet" href="css/main.css">
 </head>
 
 <body>
+    
+    <script src="https://d3js.org/d3.v5.min.js"></script>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
