Drawing the pitch

--- a/web/index.html
+++ b/web/index.html
@@ -14,8 +14,9 @@
 </head>
 
 <body>
-    
+    <!-- Scripts -->
     <script src="https://d3js.org/d3.v5.min.js"></script>
+    <script src="js/pitch.js"></script>
     <script src="js/main.js"></script>
 </body>
 
