Created a basic horizontal layout

--- a/web/index.html
+++ b/web/index.html
@@ -10,10 +10,29 @@
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet"> 
   <link rel="stylesheet" href="css/main.css">
 </head>
 
 <body>
+    <div class="container">
+        <div class="left-panel">
+            <div class="content">
+                <div style="font-size: 3rem;">
+                    <span style="font-weight:700;font-variant: small-caps">Honnan</span>
+                    <span style="font-weight:300;font-variant: small-caps">lőjek?</span>
+                </div>
+    
+                <p style="font-size: 1.25rem">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus placerat vulputate urna, quis convallis risus ullamcorper vel. Aliquam porta tristique luctus. Donec at efficitur ante. Nam at gravida dui. Nunc vulputate convallis quam, nec pharetra ipsum tincidunt ut. Etiam non vulputate purus. Nullam dapibus turpis vel dolor cursus commodo. Cras eros est, scelerisque vitae urna eget, aliquet suscipit quam. Cras ac urna vel odio congue ultrices. Etiam felis lectus, vestibulum vehicula neque at, pharetra porttitor elit. Morbi suscipit ex nec massa tristique, in consectetur purus scelerisque. Suspendisse potenti. Nullam gravida elit quis vestibulum sodales. Donec gravida quam tellus, at porta enim faucibus et. 
+                </p>
+            </div>
+        </div>
+        <div class="right-panel">
+            <div class="visualization-container"></div>
+        </div>
+    </div>
+
     <!-- Scripts -->
     <script src="https://d3js.org/d3.v5.min.js"></script>
     <script src="js/pitch.js"></script>
