--- a/web/index.html
+++ b/web/index.html
@@ -35,6 +35,7 @@
 
     <!-- Scripts -->
     <script src="https://d3js.org/d3.v5.min.js"></script>
+    <script src="js/color.js"></script>
     <script src="js/pitch.js"></script>
     <script src="js/main.js"></script>
 </body>
