Adjusted the layout: left panel is now white

--- a/web/index.html
+++ b/web/index.html
@@ -23,13 +23,46 @@
                     <span style="font-weight:300;font-variant: small-caps">lőjek?</span>
                 </div>
     
-                <p style="font-size: 1.25rem">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus placerat vulputate urna, quis convallis risus ullamcorper vel. Aliquam porta tristique luctus. Donec at efficitur ante. Nam at gravida dui. Nunc vulputate convallis quam, nec pharetra ipsum tincidunt ut. Etiam non vulputate purus. Nullam dapibus turpis vel dolor cursus commodo. Cras eros est, scelerisque vitae urna eget, aliquet suscipit quam. Cras ac urna vel odio congue ultrices. Etiam felis lectus, vestibulum vehicula neque at, pharetra porttitor elit. Morbi suscipit ex nec massa tristique, in consectetur purus scelerisque. Suspendisse potenti. Nullam gravida elit quis vestibulum sodales. Donec gravida quam tellus, at porta enim faucibus et. 
-                </p>
+                <div style="font-size: 1.25rem">
+                    Valami kis vicces szöveg.
+                </div>
+
+                <div class="gradient-container">
+                    <div class="gradient-panel">
+                    </div>
+                    <div class="gradient-separator"></div>
+                    <div class="gradient-legend">
+                        <div class="legend-container">
+                            <div class="legend-title">
+                                Inkább add haza!
+                            </div>
+                            <div class="legend-description">
+                                A lövés biztosan nem fog kaput találni.
+                            </div>
+                        </div>
+                        <div class="legend-container">
+                            <div class="legend-title">
+                                Passzolgass még!
+                            </div>
+                            <div class="legend-description">
+                                Kaput érő találatra hasonló az esély, mint egy mellé szálló lövésre. 
+                            </div>
+                        </div>
+                        <div class="legend-container">
+                            <div class="legend-title">
+                                Küldjed, bástya!
+                            </div>
+                            <div class="legend-description">
+                                A göllövés esélye akár a 25%-ot is elérheti! Tűz!
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="right-panel">
-            <div class="visualization-container"></div>
+            <div class="visualization-container">
+            </div>
         </div>
     </div>
 
@@ -37,6 +70,7 @@
     <script src="https://d3js.org/d3.v5.min.js"></script>
     <script src="js/color.js"></script>
     <script src="js/pitch.js"></script>
+    <script src="js/gradient.js"></script>
     <script src="js/main.js"></script>
 </body>
 
