--- a/web/index.html
+++ b/web/index.html
@@ -23,8 +23,8 @@
                     <span style="font-weight:300;font-variant: small-caps">lőjek?</span>
                 </div>
     
-                <div style="font-size: 1.25rem">
-                    Valami kis vicces szöveg.
+                <div class="fun-time">
+                    Bizonyára mindenki próbált már egy kellemes kerti sütögetés után focizni a haverokkal. Ilyenkor a kellő mennyiségű védőital mellett fejtörést okoz, hogy honnan is próbáljuk bevenni a kaput. Szeretnéd úgy érezni magad, mintha a nemzeti válogatott menedzsere és/vagy játékosa lennél? A HonnanLőjek app segít!
                 </div>
 
                 <div class="gradient-container">
