--- a/web/index.html
+++ b/web/index.html
@@ -58,6 +58,12 @@
                         </div>
                     </div>
                 </div>
+
+                <div class="logo-container">
+                    <a href="https://github.com/statsbomb/open-data">
+                        <img src="img/statsbomb-logo.jpg" alt="StatsBomb Logo">
+                    </a>
+                </div>
             </div>
         </div>
         <div class="right-panel">
