Added some more fun stuff

--- a/web/index.html
+++ b/web/index.html
@@ -24,7 +24,7 @@
                 </div>
     
                 <div class="fun-time">
-                    Bizonyára mindenki próbált már egy kellemes kerti sütögetés után focizni a haverokkal. Ilyenkor a kellő mennyiségű védőital mellett fejtörést okoz, hogy honnan is próbáljuk bevenni a kaput. Szeretnéd úgy érezni magad, mintha a nemzeti válogatott menedzsere és/vagy játékosa lennél? A HonnanLőjek app segít!
+                    Bizonyára mindenki próbált már egy kellemes kerti sütögetés után focizni a haverokkal. Ilyenkor fejtörést okozhat, hogy honnan is próbáljuk bevenni a kaput. Szeretnéd úgy érezni magad, mintha a nemzeti válogatott menedzsere és/vagy játékosa lennél? A HonnanLőjek app segít!
                 </div>
 
                 <div class="gradient-container">
@@ -53,10 +53,16 @@
                                 Küldjed, bástya!
                             </div>
                             <div class="legend-description">
-                                A göllövés esélye akár a 25%-ot is elérheti! Tűz!
+                                Ha innen kihagyod, válassz másik sportot!
                             </div>
                         </div>
                     </div>
+                </div>
+
+                <div class="smallprint">
+                    <a href="https://www.youtube.com/watch?v=9zX2I9DVFIU&t=15s" target="_blank">
+                        De egyébként a jóságot nem gólba, hanem minőségbe mérik!
+                    </a>
                 </div>
 
                 <div class="logo-container">
