Gradient turned into a separator

--- a/web/index.html
+++ b/web/index.html
@@ -18,57 +18,63 @@
     <div class="container">
         <div class="left-panel">
             <div class="content">
-                <div style="font-size: 3rem;">
-                    <span style="font-weight:700;font-variant: small-caps">Honnan</span>
-                    <span style="font-weight:300;font-variant: small-caps">lőjek?</span>
-                </div>
-    
-                <div class="fun-time">
-                    Bizonyára mindenki próbált már egy kellemes kerti sütögetés után focizni a haverokkal. Ilyenkor fejtörést okozhat, hogy honnan is próbáljuk bevenni a kaput. Szeretnéd úgy érezni magad, mintha a nemzeti válogatott menedzsere és/vagy játékosa lennél? A HonnanLőjek app segít!
-                </div>
-
-                <div class="gradient-container">
-                    <div class="gradient-panel">
+                <div>
+                    <div style="font-size: 3rem;">
+                        <span style="font-weight:700;font-variant: small-caps">Honnan</span>
+                        <span style="font-weight:300;font-variant: small-caps">lőjek?</span>
                     </div>
-                    <div class="gradient-separator"></div>
-                    <div class="gradient-legend">
-                        <div class="legend-container">
-                            <div class="legend-title">
-                                Inkább add haza!
-                            </div>
-                            <div class="legend-description">
-                                A lövés biztosan nem fog kaput találni.
-                            </div>
-                        </div>
-                        <div class="legend-container">
-                            <div class="legend-title">
-                                Passzolgass még!
-                            </div>
-                            <div class="legend-description">
-                                Kaput érő találatra hasonló az esély, mint egy mellé szálló lövésre. 
-                            </div>
-                        </div>
-                        <div class="legend-container">
-                            <div class="legend-title">
-                                Küldjed, bástya!
-                            </div>
-                            <div class="legend-description">
-                                Ha innen kihagyod, válassz másik sportot!
-                            </div>
-                        </div>
+        
+                    <div class="fun-time">
+                        Bizonyára mindenki próbált már egy kellemes kerti sütögetés után focizni a haverokkal. Ilyenkor fejtörést okozhat, hogy honnan is próbáljuk bevenni a kaput. Szeretnéd úgy érezni magad, mintha a nemzeti válogatott menedzsere és/vagy játékosa lennél? A HonnanLőjek app segít!
+                    </div>
+                </div>  
+
+                <div style="padding-bottom:1rem">
+                    <div class="smallprint">
+                        <a href="https://www.youtube.com/watch?v=9zX2I9DVFIU&t=15s" target="_blank">
+                            De egyébként a jóságot nem gólba, hanem minőségbe mérik!
+                        </a>
+                    </div>
+
+                    <div class="logo-container">
+                        <a href="https://github.com/statsbomb/open-data">
+                            <img src="img/statsbomb-logo.jpg" alt="StatsBomb Logo">
+                        </a>
                     </div>
                 </div>
+            </div>
+        </div>
 
-                <div class="smallprint">
-                    <a href="https://www.youtube.com/watch?v=9zX2I9DVFIU&t=15s" target="_blank">
-                        De egyébként a jóságot nem gólba, hanem minőségbe mérik!
-                    </a>
+        <div class="middle-panel">
+            <div class="gradient-container">
+                <div class="gradient-separator"></div>
+                <div class="gradient-legend">
+                    <div class="legend-container">
+                        <div class="legend-title">
+                            Inkább add haza!
+                        </div>
+                        <div class="legend-description">
+                            A lövés biztosan nem fog kaput találni.
+                        </div>
+                    </div>
+                    <div class="legend-container">
+                        <div class="legend-title">
+                            Passzolgass még!
+                        </div>
+                        <div class="legend-description">
+                            Kaput érő találatra hasonló az esély, mint egy mellé szálló lövésre. 
+                        </div>
+                    </div>
+                    <div class="legend-container">
+                        <div class="legend-title">
+                            Küldjed, bástya!
+                        </div>
+                        <div class="legend-description">
+                            Ha innen kihagyod, válassz másik sportot!
+                        </div>
+                    </div>
                 </div>
-
-                <div class="logo-container">
-                    <a href="https://github.com/statsbomb/open-data">
-                        <img src="img/statsbomb-logo.jpg" alt="StatsBomb Logo">
-                    </a>
+                <div class="gradient-panel">
                 </div>
             </div>
         </div>
