--- a/web/index.html
+++ b/web/index.html
@@ -19,9 +19,9 @@
         <div class="left-panel">
             <div class="content">
                 <div>
-                    <div style="font-size: 3rem;">
-                        <span style="font-weight:700;font-variant: small-caps">Honnan</span>
-                        <span style="font-weight:300;font-variant: small-caps">lőjek?</span>
+                    <div class="title">
+                        <span>Honnan</span>
+                        <span>lőjek?</span>
                     </div>
         
                     <div class="fun-time">
@@ -29,7 +29,7 @@
                     </div>
                 </div>  
 
-                <div style="padding-bottom:1rem">
+                <div class="content-bottom">
                     <div class="smallprint">
                         <a href="https://www.youtube.com/watch?v=9zX2I9DVFIU&t=15s" target="_blank">
                             De egyébként a jóságot nem gólba, hanem minőségbe mérik!
@@ -75,11 +75,13 @@
                     </div>
                 </div>
                 <div class="gradient-panel">
+                    <!-- D3 Generated Content -->
                 </div>
             </div>
         </div>
         <div class="right-panel">
             <div class="visualization-container">
+                <!-- D3 Generated Content -->
             </div>
         </div>
     </div>
