Improved dotted version

--- a/web/index.html
+++ b/web/index.html
@@ -51,26 +51,26 @@
                 <div class="gradient-legend">
                     <div class="legend-container">
                         <div class="legend-title">
-                            Inkább add haza!
+                            Szép lövés, bedobás!
                         </div>
                         <div class="legend-description">
-                            A lövés biztosan nem fog kaput találni.
+                            Akár be is mehetett volna, de sajnos mellégurult.
                         </div>
                     </div>
                     <div class="legend-container">
                         <div class="legend-title">
-                            Passzolgass még!
+                            Kifogta a kapus.
                         </div>
                         <div class="legend-description">
-                            Kaput érő találatra hasonló az esély, mint egy mellé szálló lövésre. 
+                            Kapus áll a kapuban, bástya.
                         </div>
                     </div>
                     <div class="legend-container">
                         <div class="legend-title">
-                            Küldjed, bástya!
+                            Lövés, gól!
                         </div>
                         <div class="legend-description">
-                            Ha innen kihagyod, válassz másik sportot!
+                            Te vagy a krisztiánó?
                         </div>
                     </div>
                 </div>
