Switched to a Hotline Miami colored half pitch viz

--- a/web/index.html
+++ b/web/index.html
@@ -11,6 +11,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet"> 
+  <link href="https://fonts.googleapis.com/css?family=Cutive+Mono|Nova+Mono|Playfair+Display:400,700&amp;subset=latin-ext" rel="stylesheet"> 
+  <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono:300,400,700" rel="stylesheet"> 
   <link rel="stylesheet" href="css/main.css">
 </head>
 
@@ -27,59 +29,40 @@
                     <div class="fun-time">
                         Bizonyára mindenki próbált már egy kellemes kerti sütögetés után focizni a haverokkal. Ilyenkor fejtörést okozhat, hogy honnan is próbáljuk bevenni a kaput. Szeretnéd úgy érezni magad, mintha a nemzeti válogatott menedzsere és/vagy játékosa lennél? A HonnanLőjek app segít!
                     </div>
+
+                    <div class="legend-title">
+                            <span>Jelmagyarázat</span>
+                        </div>
+                    <div class="circle-legend">
+                        <div id="circle-size-legend">
+                            <div id="small-circle-legend"></div>
+                            <div>Kevés gól</div>
+                            <div class="legend-sep"></div>
+                            <div id="big-circle-legend"></div>
+                            <div>Sok gól</div>
+                        </div>
+                        <div id="circle-color-legend">
+                            <div id="blue-circle-legend"></div>
+                            <div>Alacsony gólarány</div>
+                            <div class="legend-sep"></div>
+                            <div id="purple-circle-legend"></div>
+                            <div>Magas gólarány</div>
+                        </div>
+                    </div>
+
+                    <div class="select-a-circle">
+                        <span>Vidd az egered egy kör fölé!</span>
+                    </div>
+                    <div class="circle-data">
+                        <div id="goals"></div>
+                        <div id="shots"></div>
+                        <div id="percent"></div>
+                    </div>
                 </div>  
-
-                <div class="content-bottom">
-                    <div class="smallprint">
-                        <a href="https://www.youtube.com/watch?v=9zX2I9DVFIU&t=15s" target="_blank">
-                            De egyébként a jóságot nem gólba, hanem minőségbe mérik!
-                        </a>
-                    </div>
-
-                    <div class="logo-container">
-                        <a href="https://github.com/statsbomb/open-data">
-                            <img src="img/statsbomb-logo.jpg" alt="StatsBomb Logo">
-                        </a>
-                    </div>
-                </div>
             </div>
         </div>
 
         <div class="middle-panel">
-            <div class="gradient-container">
-                <div class="gradient-separator"></div>
-                <div class="gradient-legend">
-                    <div class="legend-container">
-                        <div class="legend-title">
-                            Szép lövés, bedobás!
-                        </div>
-                        <div class="legend-description">
-                            Akár be is mehetett volna, de sajnos mellégurult.
-                        </div>
-                    </div>
-                    <div class="legend-container">
-                        <div class="legend-title">
-                            Kifogta a kapus.
-                        </div>
-                        <div class="legend-description">
-                            Kapus áll a kapuban, bástya.
-                        </div>
-                    </div>
-                    <div class="legend-container">
-                        <div class="legend-title">
-                            Lövés, gól!
-                        </div>
-                        <div class="legend-description">
-                            Te vagy a krisztiánó?
-                        </div>
-                    </div>
-                </div>
-                <div class="gradient-panel">
-                    <!-- D3 Generated Content -->
-                </div>
-            </div>
-        </div>
-        <div class="right-panel">
             <div class="visualization-container">
                 <!-- D3 Generated Content -->
             </div>
