--- a/web/index.html
+++ b/web/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="no-js" lang="">
+<html>
 
 <head>
   <meta charset="utf-8">
@@ -13,6 +13,7 @@
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet"> 
   <link href="https://fonts.googleapis.com/css?family=Cutive+Mono|Nova+Mono|Playfair+Display:400,700&amp;subset=latin-ext" rel="stylesheet"> 
   <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono:300,400,700" rel="stylesheet"> 
+  
   <link rel="stylesheet" href="css/main.css">
 </head>
 
